src/main/java/edu/fit/assist/translator/gen/SoarParser.java
// Generated from D:/SoarToPrismTranslator/src/main/antlr4/edu/fit/assist/soar/Soar.g4 by ANTLR 4.13.1

    package edu.fit.assist.translator.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SoarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		Documentation=39, Print_string=40, STATE=41, Sym_constant=42, Int_constant=43, 
		Negative_pref=44, Float_constant=45, WS=46, COMMENT=47;
	public static final int
		RULE_soar = 0, RULE_soar_production = 1, RULE_flags = 2, RULE_condition_side = 3, 
		RULE_state_imp_cond = 4, RULE_cond = 5, RULE_positive_cond = 6, RULE_conds_for_one_id = 7, 
		RULE_id_test = 8, RULE_attr_value_tests = 9, RULE_attr_test = 10, RULE_value_test = 11, 
		RULE_test = 12, RULE_conjunctive_test = 13, RULE_simple_test = 14, RULE_multi_value_test = 15, 
		RULE_disjunction_test = 16, RULE_relational_test = 17, RULE_relation = 18, 
		RULE_single_test = 19, RULE_variable = 20, RULE_constant = 21, RULE_action_side = 22, 
		RULE_action = 23, RULE_print = 24, RULE_func_call = 25, RULE_func_name = 26, 
		RULE_value = 27, RULE_attr_value_make = 28, RULE_variable_or_sym_constant = 29, 
		RULE_value_make = 30, RULE_pref_specifier = 31, RULE_unary_pref = 32, 
		RULE_unary_or_binary_pref = 33, RULE_sym_constant = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"soar", "soar_production", "flags", "condition_side", "state_imp_cond", 
			"cond", "positive_cond", "conds_for_one_id", "id_test", "attr_value_tests", 
			"attr_test", "value_test", "test", "conjunctive_test", "simple_test", 
			"multi_value_test", "disjunction_test", "relational_test", "relation", 
			"single_test", "variable", "constant", "action_side", "action", "print", 
			"func_call", "func_name", "value", "attr_value_make", "variable_or_sym_constant", 
			"value_make", "pref_specifier", "unary_pref", "unary_or_binary_pref", 
			"sym_constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'sp'", "'gp'", "'{'", "'-->'", "'}'", "':'", "'o-support'", "'i-support'", 
			"'chunk'", "'default'", "'template'", "'('", "'impasse'", "')'", "'^'", 
			"'.'", "'+'", "'['", "']'", "'<<'", "'>>'", "'<>'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'<=>'", "'='", "'write '", "'(crlf)'", "'*'", "'/'", 
			"','", "'!'", "'~'", "'@'", "'&'", null, null, "'state'", null, null, 
			"'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "Documentation", "Print_string", "STATE", "Sym_constant", 
			"Int_constant", "Negative_pref", "Float_constant", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Soar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SoarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SoarContext extends ParserRuleContext {
		public List<Soar_productionContext> soar_production() {
			return getRuleContexts(Soar_productionContext.class);
		}
		public Soar_productionContext soar_production(int i) {
			return getRuleContext(Soar_productionContext.class,i);
		}
		public SoarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_soar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterSoar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitSoar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitSoar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SoarContext soar() throws RecognitionException {
		SoarContext _localctx = new SoarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_soar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				soar_production();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 || _la==T__1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Soar_productionContext extends ParserRuleContext {
		public Sym_constantContext sym_constant() {
			return getRuleContext(Sym_constantContext.class,0);
		}
		public Condition_sideContext condition_side() {
			return getRuleContext(Condition_sideContext.class,0);
		}
		public Action_sideContext action_side() {
			return getRuleContext(Action_sideContext.class,0);
		}
		public TerminalNode Documentation() { return getToken(SoarParser.Documentation, 0); }
		public FlagsContext flags() {
			return getRuleContext(FlagsContext.class,0);
		}
		public Soar_productionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_soar_production; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterSoar_production(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitSoar_production(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitSoar_production(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Soar_productionContext soar_production() throws RecognitionException {
		Soar_productionContext _localctx = new Soar_productionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_soar_production);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(76);
			match(T__2);
			setState(77);
			sym_constant();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Documentation) {
				{
				setState(78);
				match(Documentation);
				}
			}

			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(81);
				flags();
				}
			}

			setState(84);
			condition_side();
			setState(85);
			match(T__3);
			setState(86);
			action_side();
			setState(87);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FlagsContext extends ParserRuleContext {
		public FlagsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flags; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterFlags(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitFlags(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitFlags(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlagsContext flags() throws RecognitionException {
		FlagsContext _localctx = new FlagsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_flags);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__5);
			setState(90);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3968L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Condition_sideContext extends ParserRuleContext {
		public State_imp_condContext state_imp_cond() {
			return getRuleContext(State_imp_condContext.class,0);
		}
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public Condition_sideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_side; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterCondition_side(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitCondition_side(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitCondition_side(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_sideContext condition_side() throws RecognitionException {
		Condition_sideContext _localctx = new Condition_sideContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condition_side);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			state_imp_cond();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17592186048520L) != 0)) {
				{
				{
				setState(93);
				cond();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class State_imp_condContext extends ParserRuleContext {
		public TerminalNode STATE() { return getToken(SoarParser.STATE, 0); }
		public Id_testContext id_test() {
			return getRuleContext(Id_testContext.class,0);
		}
		public List<Attr_value_testsContext> attr_value_tests() {
			return getRuleContexts(Attr_value_testsContext.class);
		}
		public Attr_value_testsContext attr_value_tests(int i) {
			return getRuleContext(Attr_value_testsContext.class,i);
		}
		public State_imp_condContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_imp_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterState_imp_cond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitState_imp_cond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitState_imp_cond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_imp_condContext state_imp_cond() throws RecognitionException {
		State_imp_condContext _localctx = new State_imp_condContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_state_imp_cond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__11);
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==T__12 || _la==STATE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 51678117363720L) != 0)) {
				{
				setState(101);
				id_test();
				}
			}

			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104);
				attr_value_tests();
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__14 || _la==Negative_pref );
			setState(109);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondContext extends ParserRuleContext {
		public Positive_condContext positive_cond() {
			return getRuleContext(Positive_condContext.class,0);
		}
		public TerminalNode Negative_pref() { return getToken(SoarParser.Negative_pref, 0); }
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cond);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				positive_cond();
				}
				break;
			case Negative_pref:
				enterOuterAlt(_localctx, 2);
				{
				{
				{
				setState(112);
				match(Negative_pref);
				}
				setState(113);
				positive_cond();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Positive_condContext extends ParserRuleContext {
		public Conds_for_one_idContext conds_for_one_id() {
			return getRuleContext(Conds_for_one_idContext.class,0);
		}
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public Positive_condContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positive_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterPositive_cond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitPositive_cond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitPositive_cond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Positive_condContext positive_cond() throws RecognitionException {
		Positive_condContext _localctx = new Positive_condContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_positive_cond);
		int _la;
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				conds_for_one_id();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(117);
				match(T__2);
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(118);
					cond();
					}
					}
					setState(121); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17592186048520L) != 0) );
				setState(123);
				match(T__4);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Conds_for_one_idContext extends ParserRuleContext {
		public Id_testContext id_test() {
			return getRuleContext(Id_testContext.class,0);
		}
		public List<Attr_value_testsContext> attr_value_tests() {
			return getRuleContexts(Attr_value_testsContext.class);
		}
		public Attr_value_testsContext attr_value_tests(int i) {
			return getRuleContext(Attr_value_testsContext.class,i);
		}
		public TerminalNode STATE() { return getToken(SoarParser.STATE, 0); }
		public Conds_for_one_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conds_for_one_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterConds_for_one_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitConds_for_one_id(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitConds_for_one_id(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Conds_for_one_idContext conds_for_one_id() throws RecognitionException {
		Conds_for_one_idContext _localctx = new Conds_for_one_idContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_conds_for_one_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__11);
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(128);
				_la = _input.LA(1);
				if ( !(_la==T__12 || _la==STATE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
			setState(131);
			id_test();
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				attr_value_tests();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__14 || _la==Negative_pref );
			setState(137);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Id_testContext extends ParserRuleContext {
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public Id_testContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterId_test(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitId_test(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitId_test(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_testContext id_test() throws RecognitionException {
		Id_testContext _localctx = new Id_testContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_id_test);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			test();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Attr_value_testsContext extends ParserRuleContext {
		public List<Attr_testContext> attr_test() {
			return getRuleContexts(Attr_testContext.class);
		}
		public Attr_testContext attr_test(int i) {
			return getRuleContext(Attr_testContext.class,i);
		}
		public TerminalNode Negative_pref() { return getToken(SoarParser.Negative_pref, 0); }
		public List<Value_testContext> value_test() {
			return getRuleContexts(Value_testContext.class);
		}
		public Value_testContext value_test(int i) {
			return getRuleContext(Value_testContext.class,i);
		}
		public Attr_value_testsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_value_tests; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterAttr_value_tests(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitAttr_value_tests(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitAttr_value_tests(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_value_testsContext attr_value_tests() throws RecognitionException {
		Attr_value_testsContext _localctx = new Attr_value_testsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attr_value_tests);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Negative_pref) {
				{
				setState(141);
				match(Negative_pref);
				}
			}

			setState(144);
			match(T__14);
			setState(145);
			attr_test();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__15) {
				{
				{
				setState(146);
				match(T__15);
				setState(147);
				attr_test();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 51678117367816L) != 0)) {
				{
				{
				setState(153);
				value_test();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Attr_testContext extends ParserRuleContext {
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public Attr_testContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterAttr_test(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitAttr_test(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitAttr_test(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_testContext attr_test() throws RecognitionException {
		Attr_testContext _localctx = new Attr_testContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attr_test);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			test();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Value_testContext extends ParserRuleContext {
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public Conds_for_one_idContext conds_for_one_id() {
			return getRuleContext(Conds_for_one_idContext.class,0);
		}
		public Value_testContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).enterValue_test(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoarListener ) ((SoarListener)listener).exitValue_test(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoarVisitor ) return ((SoarVisitor<? extends T>)visitor).visitValue_test(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Value_testContext value_test() throws RecognitionException {
		Value_testContext _localctx = new Value_testContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_value_test);
		int _la;
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__17:
			case T__19:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case Print_string:
			case STATE:
			case Sym_constant:
			case Int_constant:
			case Float_constant:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(161);
				test();
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16) {
					{
					setState(162);
					match(T__16);
					}
				}

				}
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(165);
				conds_for_one_id();
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16) {
					{
					setState(166);
					match(T__16);
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
